--- a/package.json
+++ b/package.json
@@ -1,18 +1,37 @@
 {
   "name": "denmark-swimming",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eas:android:preview:local": "eas build -p android --profile preview --local",
+    "eas:ios:preview": "eas build -p ios --profile preview"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.13",
+    "expo-blur": "~12.4.1",
+    "expo-constants": "~14.4.2",
+    "expo-linking": "~5.0.2",
+    "expo-location": "~16.1.0",
+    "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "polished": "^4.2.2",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "swr": "^2.2.4",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
