--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-location": "~16.1.0",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
     "polished": "^4.2.2",
     "react": "18.2.0",
     "react-native": "0.72.5",
@@ -30,12 +31,14 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "supercluster": "^8.0.1",
     "swr": "^2.2.4",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/supercluster": "^7.1.1",
     "typescript": "^5.1.3"
   },
   "private": true
