--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# dependencies
+# Environment variables
+.env
+
+# Dependencies
 node_modules/
 
 # Expo
