--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.5.1",
+    "@mapbox/polyline": "^1.2.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "date-fns": "^2.30.0",
     "expo": "~49.0.13",
@@ -33,10 +34,12 @@
     "react-native-svg": "13.9.0",
     "supercluster": "^8.0.1",
     "swr": "^2.2.4",
+    "zod": "^3.22.4",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/mapbox__polyline": "^1.0.3",
     "@types/react": "~18.2.14",
     "@types/supercluster": "^7.1.1",
     "typescript": "^5.1.3"
