feat: background data loader and iOS 26 app icon

--- a/eas.json
+++ b/eas.json
@@ -16,6 +16,17 @@
     },
     "production": {}
   },
+  "submit": {
+    "production": {
+      "ios": {
+        "appleId": "ondrejbarta@icloud.com",
+        "ascAppId": "6468695221"
+      },
+      "android": {
+        "track": "production"
+      }
+    }
+  },
   "cli": {
     "promptToConfigurePushNotifications": false
   }
